assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    color: #FBF2C5;
    background: #9B1D42;
}

div {
    vertical-align: top;
    display: inline-block;
    width: 30%;
    padding: 0 10px;
}

p {
    padding: 1%;
}

.release-info {
    width: 20%;
}

.release-info > img {
    margin-left: 10px;
    height: 45%;
    width: 45%;
}

.release-info > p {
    margin-top: 0;
}

.release-info > table {
    clear: both;
    margin-left: 10px;
}

table, tr {
    border: 1px solid;
    border-color: inherit;
}


hr {
    border-top: 1px solid #9B1D42;
    width: 100%;
    margin: 10px 0;
    clear: both;
} 

#logo {
    float: left;
    font-size: 280%;
    margin-left: 30px;
    font-family: Bungee;
    color: #FBF2C5;
    background: #9B1D42;

}

h3 {
    font-family: sans-serif;
    color: #FBF2C5;
    background: #9B1D42;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #FBF2C5;

}

footer {
    height: auto;
    padding: 1%;
}

.external-sites {
    margin-top: 1%;
    text-align: center;
}

.external-sites li {
    display: inline;
    padding: 1%;
    border-style: solid;
    border-color: inherit;
}

.external-sites a {
    font-size: 100%;
    text-decoration: none;
    color: inherit;
}

#box-art {
    clear: both;
    line-height: 0;
    column-count: 4;
    column-gap: 0;
    margin-top: 1%;
}

#box-art > a > img {
    width: 100%;
}

#site-intro {
    padding-left: 30px;
}

#consoles {
    margin-left: 10px;
}

#consoles td {
    height: 150px;
}

.console-image {
    height: inherit;
    width: inherit;
}


@media screen and (max-width: 1200px) {
    #box-art {
        column-count: 4;
    }

}

@media screen and (max-width: 905px) {
    #box-art {
        column-count: 2;
    }

    #menu {
        clear: left;
        float: left;
        margin-left: 10px;
        margin-bottom: 20px;
        line-height: 25px;
    }

    #logo {
        margin-left: 10px;
    }

    #site-intro {
        padding-left: 10px;
    }

    #consoles td {
        height: 150px;
        width: 260px;
    }

    #consoles {
        margin-left: 0;
    }

    .release-info > table {
        float: left;
        margin-right: 20px;
    }

    div {
        display:block;
        width: auto;
    }

    .release-info {
        display: inline-block;
        width: auto;
    }


}

@media screen and (max-width: 800px) {
    #box-art {
        column-count: 1;
    }

    #site-intro {
        width: auto;
    }

    #logo {
        margin-left: 5px;
    }

    #menu {
        margin-left: 5px;
        letter-spacing: 1px;
    }

    div {
        display:block;
        width: auto;
    }

    #consoles td {
        height: 100px;
        width: 170px;
        
    }

    p {
        padding: 5%;
    }

    #menu li {
        float: right;
        list-style-type: none;
        
    }

    .external-sites li {
        display: block;
    }

    .release-info {
        display: inline-block;
        width: auto;
    }

    iframe {
        width: auto;
    }

}

